{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Character",
            "id": "c556b326-ccf9-4ac9-9281-3b354d3537f7",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "2f4e08c1-7722-4f6d-9ae7-6472cc1e301b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "806abe2a-ba24-40ba-9e75-29dcb39d29ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "5862a02e-3059-48da-9956-21fb3ff2d2f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shield",
                    "type": "Button",
                    "id": "8ede2881-91df-4554-b6a8-dd67dcfac23c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "KeyboardMovement",
                    "id": "fcf73642-5b75-4313-9da5-10926847c54e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "b32591bf-06a0-4a25-a12f-468b1a6c9dae",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b0ff4d99-06d9-42b7-8528-839db12f3ab0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8a3b33f3-e4c1-47b1-a56f-b6c474b73178",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb180a2b-cf15-4b96-b6f9-f89447b86c10",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shield",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4bece3e-7832-425d-973d-6c75dbf314de",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Weather",
            "id": "c6a7f60d-c809-4a4f-a133-188c468643ba",
            "actions": [
                {
                    "name": "Whirlwind",
                    "type": "Button",
                    "id": "810a5169-d6f6-4549-9e67-1ae6d9921d8c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WindVelocity",
                    "type": "Button",
                    "id": "77451051-a175-43e7-910f-675f7f4c8efb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RainIntensity",
                    "type": "Button",
                    "id": "a27fa4eb-0f55-4a42-8b51-63d3715a74aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d0708040-9d5a-4db5-ac31-1b09221e9092",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Whirlwind",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Velocity",
                    "id": "8c1d0328-46ec-46d9-9d8a-f17df0d14788",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WindVelocity",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6f4586e1-0778-4f84-bbb9-d742b9c55dfb",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WindVelocity",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "71f274ba-3ea7-43a9-91df-8077e0a0ee7b",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WindVelocity",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Intensity",
                    "id": "eca3a8c1-63ec-4776-9fda-d5714f2a4c87",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RainIntensity",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "325d35b1-c553-4313-8c67-caf3a73264dc",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RainIntensity",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "74cd36d3-0321-462a-9bb9-442af2d84d46",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RainIntensity",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}